[package]
name = "minerust"
version = "1.0.0-dev.1"
edition = "2021"

[features]
network = []
webapi = ["web"]
auth = ["web"]
web = []
components = []

[dependencies]
serde_json = "1.0.88"
paste = "1.0.9"
uuid = "1.2.2"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.147", features = ["derive"] }
warp = "0.3.3"
webbrowser = "0.8.2"
rand = "0.8.5"